Add health check functionality and expose health port in Docker setup

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,4 @@ TWITTER_ACCESS_SECRET=your-twitter-access-secret
 
 # Optional timezone for logs/scheduler (e.g., Africa/Lagos)
 TZ=UTC
+HEALTH_PORT=8080
