--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - .env
     environment:
       - TZ=${TZ:-UTC}
+      - HEALTH_PORT=${HEALTH_PORT:-8080}
+    ports:
+      - "${HEALTH_PORT:-8080}:8080"
     # If you want to mount a local folder for uploads or logs, uncomment:
     # volumes:
     #   - ./data:/app/data
